# Functional-Tic-Tac-Toe

./: README.txt  hw4.cabal  stack.yaml
app/: Main.hs
src/: TicTacToe.hs
test/: Spec.hs
